--- a/index.html
+++ b/index.html
@@ -1,3 +1,61 @@
-<html>
-  Hello World!
+<!doctype html>
+<html lang="en" class="h-100">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <title>Union.ai</title>
+
+
+    <!-- Bootstrap core CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+
+    
+    <!-- Custom styles for this template -->
+    <link href="core.css" rel="stylesheet">
+  </head>
+  <body class="d-flex h-100 text-center text-white bg-dark">
+    
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+  <header class="mb-auto">
+    <div>
+      <h3 class="float-md-start mb-0">Union.ai</h3>
+      <nav class="nav nav-masthead justify-content-center float-md-end">
+        <a class="nav-link active" aria-current="page" href="#">Welcome</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="px-3">
+    <h1>The foundational piece of your Data and ML Ops strategy.</h1>
+    <p class="lead text-justify">We believe orchestration is a foundational technology that will power ML and Data Ops. Our goal is to enable all users to take their ideas from concept to production, with high quality and no tech debt. Our core team consists of veterans from Microsoft, Amazon, Google, and most recently Lyft, where we helped create <a href="https://flyte.org/">Flyte</a>, Lyft's open-source, production-grade orchestration platform. We are backed by top-tier commercial investors who share our long term vision. </p>
+	<p class="lead text-justify"> We are committed to hiring the best talent globally and collaborating across time zones. We have positions open across the stack - frontend, backend distributed systems, ML and Data Engineers, open source community managers and technical writers. Contact us to learn more!</p>
+    	<p class="lead">
+		<a href="https://boards.greenhouse.io/nuclyde/" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Open Positions</a>
+    	</p>
+  </main>
+
+  <footer class="mt-auto text-white-50">
+    <p>Union.ai<a href="https://union.ai/" class="text-white"></p>
+  </footer>
+</div>
+
+  </body>
 </html>
